apps/media/sabnzbd/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
spec:
  ingressClassName: tailscale
  rules:
    - host: sabnzbd
      http:
        paths:
        - backend:
            service:
              name: sabnzbd
              port:
                name: http
          path: /
          pathType: Prefix
  tls:
    - hosts:
        - sabnzbd
